# a_shitty_day

./: .gitignore  CHANGELOG.md  Cargo.toml  Credits.rtf  Makefile.toml  README.md
.github/workflows/: release.yaml
assets/conversations/: niklas.md
assets/map/: mall.tmx  untitled.tmx
crates/a_shitty_day_plugin/: Cargo.toml
crates/a_shitty_day_plugin/src/: assets.rs  audio.rs  events.rs  lib.rs  loading.rs  map.rs  menu.rs  player.rs  ui.rs
crates/a_shitty_day_plugin/src/events/: piano.rs
crates/a_shitty_day_plugin/src/map/: mall.rs  second_mall.rs
crates/a_shitty_day_plugin/src/ui/: conversation.rs
crates/a_shitty_day_plugin/src/ui/conversation/: mall.rs
crates/mini_jam_72_plugin/: Cargo.toml
crates/mini_jam_72_plugin/src/: actions.rs  audio.rs  lib.rs  map.rs  menu.rs  player.rs  ui.rs
crates/mini_jam_72_plugin/src/map/: mall.rs  second_mall.rs
crates/mini_jam_72_plugin/src/ui/: conversation.rs
crates/mini_jam_72_plugin/src/ui/conversation/: mall.rs
src/: main.rs
