[package]
name = "mini_jam_72"
description = "A tower-defense game with some puzzle aspects"
version = "1.4.1-dev"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"
publish = false

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "mini_jam_72_plugin/default",
    "bevy/bevy_wgpu"
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
winit = "0.24.0"
mini_jam_72_plugin = { path = "crates/mini_jam_72_plugin", version = "0.1.0" }

[build-dependencies]
embed-resource = "1.4"

[package.metadata.bundle]
name = "mini_jam_72"
identifier = "dev.nikl.mini_jam_72"
icon = ["build/*.png"]
resources = ["assets"]
short_description = "A tower-defense game with some puzzle aspects"
