[package]
name = "a_shitty_day"
description = "You keep dying and reliving the same day over and over"
version = "1.4.1-dev"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"
publish = false

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "a_shitty_day_plugin/default",
    "bevy/bevy_wgpu"
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
winit = "0.24.0"
a_shitty_day_plugin = { path = "crates/a_shitty_day_plugin", version = "0.1.0" }

[build-dependencies]
embed-resource = "1.4"

[package.metadata.bundle]
name = "a_shitty_day"
identifier = "dev.nikl.a_shitty_day"
icon = ["build/*.png"]
resources = ["assets"]
