[package]
name = "a_shitty_day_plugin"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"
publish = false

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_improved_audio/mp3",
    "bevy/bevy_wgpu"
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
bevy_improved_audio = { git="https://github.com/NiklasEi/bevy_improved_audio.git" }
